--- a/myblog/blog/templates/blog/post_create.html
+++ b/myblog/blog/templates/blog/post_create.html
@@ -18,7 +18,7 @@
     </div>
 
     <h1 class="large-text text-center mt-custom mb-5 animated">Resumes, made simple</h1>
-    <p class="larger-text text-center animated">Quickly have a resume tailored to any job</p>
+    <p class="larger-text text-center mb-5 animated">Quickly have a resume tailored to any job</p>
 
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 text-center">
